--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,12 +1,14 @@
 <h2>Products</h2>
 
 <!-- *ngFor is a "structural directive". Structural directives shape or reshape the DOM's structure, typically by adding, removing, and manipulating the elements to which they are attached. Any directive with an * is a structural directive. -->
+<!-- This div repeats itself for each element in 'products' -->
+
 <div *ngFor="let product of products">
 
 
     <!-- the interpolation syntax {{ }}. Interpolation renders a property's value as text.-->
-   
-   
+
+
 <!-- Add the anchor now, and set the anchor's title to be the product's name by using the property binding [ ] syntax, as shown below -->
 <!--In the preview pane, hover over the displayed product name to see the bound name property value. They are the same. Interpolation {{ }} lets you render the property value as text; property binding [ ] lets you use the property value in a template expression.-->
 <a [title]="product.name + ' details'">
@@ -20,16 +22,21 @@
         Description: {{ product.description }}
       </p>
 
-      <!-- Event binding is done by using ( ) around the event, as shown below -->
+      <!-- Event binding is done by using ( ) around the event, as shown below.
+      This connects to 'share()' which is defined in product-list.component.ts -->
+
       <button (click)="share()">
         Share
-      </button>s
+      </button>
 
-
-      <!-- The new product alert component takes a product as input from the product list. With that input, it shows or hides the "Notify Me" 
-        button, based on the price of the product. The Phone XL price is over $700, so the "Notify Me" button appears on that product.
-      "product" is where the data is "gotten" and [product] is where it's sent to the product-alerts component and the logic is performed there.
+      <!-- The new product alert component takes a product as input from the product list. With that input,
+        it shows or hides the "Notify Me" button, based on the price of the product. The Phone XL price is
+        over $700, so the "Notify Me" button appears on that product.  "product" is where the data is "gotten"
+        and [product] is where it's sent to the product-alerts component and the logic is performed there.
       -->
+
+      <!-- Event binding is done by using ( ) around the event, as shown below.
+      This connects to 'share()' which is defined in product-list.component.tx -->
       <app-product-alerts
       [product]="product"
       (notify)="onNotify()">
