--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -6,5 +6,7 @@
 <h4> {{ product.price | currency }} </h4>
 <p> {{ product.description }} </p>
 
+<button (click) = "addToCart(product)">Add To Cart!</button>
+
 
 </div>
