--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,3 +1,16 @@
+<h3> Cart Contents</h3>
+
 <p>
-  cart works!
-</p>
+  <a routerLink="/shipping">
+    Shipping Prices
+  </a>
+  </p>
+
+<div class="cart-item" *ngFor="let item of items">
+
+  <span> {{item.name}} </span>
+  <span> {{item.price | currency }} </span>
+
+
+
+</div>
