--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,8 +1,11 @@
 <h2>Products</h2>
 
-<!-- *ngFor is a "structural directive". Structural directives shape or reshape the DOM's structure, typically by adding, removing, and manipulating the elements to which they are attached. Any directive with an * is a structural directive. -->
-<!-- This div repeats itself for each element in 'products' -->
+<!-- *ngFor is a "structural directive". 
+  Structural directives shape or reshape the DOM's structure, typically by adding, 
+  removing, and manipulating the elements to which they are attached. 
+  Any directive with an * is a structural directive. -->
 
+<!-- This div repeats itself for each element in 'products' -->
 <!-- this assigns each index in the products array to the
   productId variable when iterating over the list
 I don't know why we can't just do product.index
@@ -12,7 +15,10 @@ I don't know why we can't just do product.index
 <!-- the interpolation syntax {{ }}. Interpolation renders a property's value as text.-->
 
 <!-- Add the anchor now, and set the anchor's title to be the product's name by using the property binding [ ] syntax, as shown below -->
-<!--In the preview pane, hover over the displayed product name to see the bound name property value. They are the same. Interpolation {{ }} lets you render the property value as text; property binding [ ] lets you use the property value in a template expression.-->
+<!--In the preview pane, hover over the displayed product name to see the bound name property value. They are the same. 
+  
+  Interpolation {{ }} lets you render the property value as text; property binding [ ] lets you use 
+  the property value in a template expression.-->
 
 <!-- The RouterLink directive gives the router control over the anchor
   element. In this case, the route (URL) contains one fixed
@@ -32,7 +38,7 @@ I don't know why we can't just do product.index
 
     <p *ngIf="product.description">
         Description: {{ product.description }}
-      </p>
+    </p>
 
       <!-- Event binding is done by using ( ) around the event, as shown below.
       This connects to 'share()' which is defined in product-list.component.ts -->
@@ -41,7 +47,7 @@ I don't know why we can't just do product.index
         Share
       </button>
 
-      <!-- The new product alert component takes a product as input from the product list. With that input,
+      <!-- The new product alert component takes a product as input from the product list.  With that input,
         it shows or hides the "Notify Me" button, based on the price of the product. The Phone XL price is
         over $700, so the "Notify Me" button appears on that product.  "product" is where the data is "gotten"
         and [product] is where it's sent to the product-alerts component and the logic is performed there.
@@ -52,13 +58,9 @@ I don't know why we can't just do product.index
 This connects to 'share()' which is defined in product-list.component.tx
 
 To make the "Notify Me" button work, you need to configure two things:
-
-the product alert component to emit an event when the user clicks "Notify Me"
-the product list component to act on that event
-Open product-alerts.component.ts.
-
-Import Output and EventEmitter from @angular/core:
-
+the product alert component to emit an event when the user clicks "Notify Me" and
+the product list component in theto act on that event.
+Open product-alerts.component.ts
     -->
 
       <app-product-alerts
