--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -1,7 +1,9 @@
+<!-- The below connects to the angular router.  / is the homepage. -->
 <a [routerLink]="['/']">
   <h1>My Store</h1>
 </a>
 
+<!-- The checkout button connects to the "cart" component -->
 <a [routerLink]="['/cart']" class="button fancy-button"><i class="material-icons">shopping_cart</i>Checkout</a>
 
 <!-- 
